# Ecran-Veille-Volumio

./: README.md  install.sh  pyproject.toml
config/: volumio-screensaver.env.example
docs/: VOLUMIO_PLUGIN_PUBLICATION.md
systemd/: volumio-screensaver.service
tests/: test_clock.py  test_config.py  test_display.py
volumio-plugin/system_hardware/pirate_audio_screensaver/: README.md  UIConfig.json  index.js  install.sh  package.json
volumio-plugin/system_hardware/pirate_audio_screensaver/i18n/: strings_en.json  strings_fr.json
volumio_screensaver/: __init__.py  buttons.py  clock.py  config.py  display.py  main.py  volumio.py
