[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "volumio-pirate-audio-screensaver"
version = "0.1.0"
description = "Clock screensaver for Volumio on Pimoroni Pirate Audio 1W Amp"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "gpiodevice>=0.0.5",
  "st7789>=1.0.1,<2",
]

[project.scripts]
volumio-screensaver = "volumio_screensaver.main:main"

[tool.setuptools.packages.find]
include = ["volumio_screensaver*"]
